crates/wamex_object/src/analysis/snapshots/wamex_object__analysis__split_point__tests__simple_graph.wasm - split_program_info.snap
---
source: crates/wamex_object/src/analysis/split_point.rs
expression: split_info_output
---
=== Split Program Structure ===

Module #0: Single(Main)
  Defined symbols: 9
    0 <hello_world>
    1 <version>
    2 <constant>
    3 <indirect_fn>
    4 <no_inline_fn>
    10 <.Lanon.40cffdd5158028b640e87266bd095959.0>
    11 <.Lanon.40cffdd5158028b640e87266bd095959.1>
    12 <.Lanon.40cffdd5158028b640e87266bd095959.2>
    13 <.Lswitch.table.indirect_fn>
